@@ -7,6 +7,8 @@ use Carp;
 use Try::Tiny;
 use Graph::Directed;
 use File::Spec::Functions qw{catfile splitpath};
+use File::Basename;
+use File::Copy;
 use Class::Load qw{load_class};
 use File::Slurp;
 use JSON qw{from_json};
@@ -39,6 +41,8 @@ npg_pipeline::pluggable
 
 =head1 SUBROUTINES/METHODS
 
+=cut
+
 ##################################################################
 ################## Public attributes, ############################
 ###### which will be available as script arguments ###############
@@ -46,6 +50,82 @@ npg_pipeline::pluggable
 ##################################################################
 ################## and public methods ############################
 ##################################################################
+
+############## All about the main pipeline log ###################
+
+=head2 log_file_name
+
+The name for the log file of this pipeline script.
+
+=cut
+
+has q{log_file_name} => (
+  isa        => q{Str},
+  is         => q{ro},
+  lazy_build => 1,
+  documentation =>
+  q{The name for the log file of this pipeline script.},
+);
+sub _build_log_file_name {
+  my $self = shift;
+
+  my $name;
+  if ($self->_has_log_file_path) {
+    ($name) = fileparse $self->log_file_path;
+  } else {
+    $name = $self->_output_file_name_root() . q{.log};
+  }
+
+  return $name;
+}
+
+=head2 log_file_dir
+
+The directory for the log file of this pipeline script.
+
+=cut
+
+has q{log_file_dir} => (
+  isa        => q{Str},
+  is         => q{ro},
+  lazy_build => 1,
+  documentation =>
+  q{The directory for the log file of this pipeline script.},
+);
+sub _build_log_file_dir {
+  my $self = shift;
+
+  my $dir;
+  if ($self->_has_log_file_path) {
+    my $name;
+    ($name, $dir) = fileparse $self->log_file_path;
+    $dir =~ s{/\Z}{}smx;
+  } else {
+    $dir = $self->runfolder_path();
+  }
+
+  return $dir;
+}
+
+=head2 log_file_path
+
+The full path for the log file of this pipeline script.
+Computed from log_file_dir and log_file_name.
+
+=cut
+
+has q{log_file_path} => (
+  isa           => q{Str},
+  is            => q{ro},
+  predicate     => '_has_log_file_path',
+  lazy_build    => 1,
+  documentation =>
+  q{The full path for the log file of this pipeline script.},
+);
+sub _build_log_file_path {
+  my $self = shift;
+  return catfile($self->log_file_dir(), $self->log_file_name);
+}
 
 ############## All about functions ###############################
 
@@ -334,8 +414,12 @@ sub main {
     # untie. Dies not cause an error if STDERR has not been
     # tied. 
     untie *STDERR;
-    croak($error);
   }
+
+  $self->_create_log_link();
+
+  $error and croak $error;
+
   return;
 }
 
@@ -382,17 +466,6 @@ sub prepare {
     $self->info('Not running spider');
   }
   return;
-}
-
-=head2 log_file_path
-
-Suggested log file full path.
-
-=cut
-
-sub log_file_path {
-  my $self = shift;
-  return catfile($self->runfolder_path(), $self->_log_file_name);
 }
 
 ##################################################################
@@ -444,16 +517,6 @@ sub _build__output_file_name_root {
   # If $self->script_name includes a directory path, change / to _
   $name =~ s{/}{_}gmxs;
   return $name;
-}
-
-has q{_log_file_name} => (
-  isa        => q{Str},
-  is         => q{ro},
-  lazy_build => 1,
-);
-sub _build__log_file_name {
-  my $self = shift;
-  return $self->_output_file_name_root() . q{.log};
 }
 
 has q{_cloned_attributes} => (
@@ -640,6 +703,35 @@ sub _run_spider {
   return;
 }
 
+#####
+# Attempts to create in the analysis directory a hard link to
+# or, if unsuccessful, a copy of the log file of the pipeline.
+# All errors are captured. Best effort.
+#
+sub _create_log_link {
+  my $self = shift;
+
+  (-e $self->analysis_path) or return;
+
+  my $link = catfile($self->analysis_path, $self->log_file_name);
+  if (!-e $link) {
+    try {
+      my $linked = 1;
+      if (not link $self->log_file_path, $link) {
+        # If cannot hard link, just copy.
+        $linked = copy $self->log_file_path, $link;
+      }
+      $linked and $self->info("Created link or copy $link for the log file");
+    } catch {
+      $self->warn("Error creating a link or copy: $_");
+    };
+  } else {
+    $self->warn("Will not overwrite existing file $link");
+  }
+
+  return;
+}
+
 __PACKAGE__->meta->make_immutable;
 
 1;
@@ -670,6 +762,10 @@ __END__
 
 =item File::Spec::Functions
 
+=item File::Basename
+
+=item File::Copy
+
 =item Readonly
 
 =item Try:Tiny
@@ -697,7 +793,7 @@ Marina Gourtovaia
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2018 Genome Research Ltd
+Copyright (C) 2018,2020 Genome Research Ltd.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
